# api/resource/file/v1/resource_file_service_http.pb.go
@@ -40,7 +40,8 @@ type FileHTTPServer interface {
 
 func RegisterFileHTTPServer(s *http.Server, srv FileHTTPServer) {
 	r := s.Route("/")
-	r.GET("/resource/api/v1/file", _File_GetFile0_HTTP_Handler(srv))
+	r.GET("/resource/client/v1/file", _File_GetFile0_HTTP_Handler(srv))
+	r.GET("/resource/api/v1/file", _File_GetFile1_HTTP_Handler(srv))
 	r.GET("/resource/api/v1/files", _File_ListFile0_HTTP_Handler(srv))
 	r.POST("/resource/client/v1/file/prepare_upload", _File_PrepareUploadFile0_HTTP_Handler(srv))
 	r.POST("/resource/api/v1/file/prepare_upload", _File_PrepareUploadFile1_HTTP_Handler(srv))
@@ -49,6 +50,25 @@ func RegisterFileHTTPServer(s *http.Server, srv FileHTTPServer) {
 }
 
 func _File_GetFile0_HTTP_Handler(srv FileHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetFileRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationFileGetFile)
+		h := ctx.Middleware(func(ctx context.Context, req any) (any, error) {
+			return srv.GetFile(ctx, req.(*GetFileRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetFileReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _File_GetFile1_HTTP_Handler(srv FileHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
 		var in GetFileRequest
 		if err := ctx.BindQuery(&in); err != nil {
